# ridgeback_simulator

.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
mecanum_gazebo_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml  readme.md
mecanum_gazebo_plugin/src/: mecanum_plugin.cpp
ridgeback_gazebo/: CHANGELOG.rst  package.xml
ridgeback_gazebo/launch/: ridgeback_world.launch  spawn_ridgeback.launch
ridgeback_gazebo/worlds/: ridgeback_open.world  ridgeback_race.world  test_race.world
ridgeback_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
ridgeback_gazebo_plugins/include/ridgeback_gazebo_plugins/: ridgeback_ros_force_based_move.h
ridgeback_gazebo_plugins/src/: ridgeback_ros_force_based_move.cpp
ridgeback_simulator/: CHANGELOG.rst  package.xml
